--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+
+    <string name="title_activity_camera_view">CameraViewActivity</string>
+    <string name="photo">Photo</string>
+    <string name="video">Video</string>
 </resources>
